# streamlitInteractiveResume

./: About.py  CODEOWNERS  Changelog.md  Dockerfile  Home.py  LICENSE  README.md  pyproject.toml  requirements.txt
assets/css/: multi_select_styles.css  slider_styles.css
assets/js/: slider_script.js
data/: education.json  introduction.json  professional_experience.json  profile_data.json  profile_data_template.json
pages/: 1_Experience.py  2_Skills.py  3_Education.py
src/: __init__.py  base_library.py  config.py  dataModel.py  data_models.py  html_component.py  json_handler.py  schema_handler.py  streamlitComponent.py  utilities.py
